[tool.poetry]
name = "stress-indicator"
version = "0.1.0"
description = "Autism stress detection app"
authors = ["Your Name <you@example.com>"]
package-mode = false  

[tool.poetry.dependencies]
python = ">=3.11,<3.14" 
streamlit = "^1.52.2"
pandas = "^2.3.3"
google-genai = "^1.56.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"